--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+beautifulsoup4==4.5.1
+bs4==0.0.1
 falcon==1.0.0
+gevent==1.1.2
+greenlet==0.4.10
+gunicorn==19.6.0
+jsonpickle==0.9.3
+Pygments==2.1.3
 python-mimeparse==1.5.3
+requests==2.11.1
 six==1.10.0
